# kosenctfx

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.test.yaml  compose.yaml  ctf_config.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  envfile_example  memo
ansible/: docker.yml
challengemanager/: go.mod  go.sum  main.go
challengeserver/: go.mod
dev/: docker-compose.yml
example/: dummy_user.py  make_challenge.py
frontend/: package.json
grafana/: dashboard.json  dashboard.yml  datasource.yml  grafana.ini
hosts/: Dockerfile  script.sh
infra/: Vagrantfile  ansible.cfg  clean.sh  hosts  infra.py  local_ansible.sh  manager.ini  memo  pyproject.toml  registry.json  token
infra/ansible/: challengemanager.service  challengemanager.yml  docker.service  docker.yml  docker_leader.yml
nginx/: Dockerfile.prod  default.conf
prometheus/: prometheus.yml
provisioning/: ansible.cfg  hosts  main.yml
schema/: challenge.graphqls  schema.graphqls  submission.graphqls  team.graphqls
scoreserver/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  Makefile  go.mod  go.sum  gqlgen.yml  main.go  models_gen.go
solvability_check/: challenges.json  check.py  server.json
test-client/: main.py  pyproject.toml
tf/: .gitignore  main.tf  terraform.tfstate  terraform.tfstate.backup
tool/: config.ini  config.ini_example  cookie.pickle  pyproject.toml  tool.py
ui/: .dockerignore  .eslintrc.js  Dockerfile  Dockerfile.dev  Dockerfile.prod  apollo.config.js  next.config.js  nginx.conf  package.json  tailwind.config.js  tsconfig.json
(+315 files in other folders)
