[tool.poetry]
name = "tool"
version = "0.1.0"
description = ""
authors = ["theoremoon <theoldmoon0602@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"
requests = "^2.24.0"
minio = "^6.0.0"
tableprint = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
